@@ -7,19 +7,11 @@ import ru.otus.hw.dao.dto.QuestionDto;
 import ru.otus.hw.domain.Question;
 import ru.otus.hw.exceptions.QuestionReadException;
 
-import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.*;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 public class CsvQuestionDao implements QuestionDao {
@@ -27,39 +19,25 @@ public class CsvQuestionDao implements QuestionDao {
 
     @Override
     public List<Question> findAll() {
-        // Использовать CsvToBean
-        // https://opencsv.sourceforge.net/#collection_based_bean_fields_one_to_many_mappings
-        // Использовать QuestionReadException
-        // Про ресурсы: https://mkyong.com/java/java-read-a-file-from-resources-folder/
+        ClassLoader classLoader = getClass().getClassLoader();
+        String fileName = fileNameProvider.getTestFileName();
 
-        InputStream is = getFileFromResourceAsStream(fileNameProvider.getTestFileName());
-        InputStreamReader r = new InputStreamReader(is);
+        try (InputStream inputStream = classLoader.getResourceAsStream(fileName)) {
+            if (Objects.isNull(inputStream)) {
+                throw new QuestionReadException("file not found! " + fileName);
+            }
+            InputStreamReader inputStreamReader = new InputStreamReader(inputStream);
 
-        return readQuestionsFromCsv(r);
-
-}
-
-private InputStream getFileFromResourceAsStream(String fileName) {
-    ClassLoader classLoader = getClass().getClassLoader();
-    InputStream inputStream = classLoader.getResourceAsStream(fileName);
-
-    if (inputStream == null) {
-        throw new QuestionReadException("file not found! " + fileName);
-    } else {
-        return inputStream;
-    }
-
-}
-
-    private List<Question> readQuestionsFromCsv(final InputStreamReader reader) {
-        return new CsvToBeanBuilder<QuestionDto>(reader)
-                .withType(QuestionDto.class)
-                .withSeparator(';')
-                .withSkipLines(1)
-                .build().stream()
-                .filter(Objects::nonNull)
-                .map(QuestionDto::toDomainObject)
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+            return new CsvToBeanBuilder<QuestionDto>(inputStreamReader)
+                    .withType(QuestionDto.class)
+                    .withSeparator(';')
+                    .withSkipLines(1)
+                    .build()
+                    .parse()
+                    .stream()
+                    .map(QuestionDto::toDomainObject).toList();
+        } catch (IOException e) {
+            throw new QuestionReadException("file not read! " + fileName, e);
+        }
     }
 }
